<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/auftraege"
        android:background="@color/backgroundColor"
        android:textColor="@color/textColor"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_Create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_plus_24"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        app:backgroundTint="@color/button"
        app:tint="@color/backgroundColor"
        android:focusable="true"
        android:contentDescription="@string/neu" />
    <TextView
        android:id="@+id/keineAufgaben"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:background="@color/backgroundColor"
        android:textColor="@color/textColor"/>
</androidx.constraintlayout.widget.ConstraintLayout>