<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titel"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="RelativeOverlap" />
    <EditText
        android:id="@+id/update_etTitel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/titel"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="Title" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/datum"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="RelativeOverlap" />
    <EditText
        android:id="@+id/update_etDatum"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/date"
        android:layout_marginTop="130dp"
        tools:ignore="TextFields"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="date" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/beschreibung"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="RelativeOverlap" />
    <EditText
        android:id="@+id/update_etBeschreibung"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:hint="@string/ok_to_empty"
        android:layout_marginTop="200dp"
        android:gravity="top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="description"
        android:inputType="" />
    <Button
        android:id="@+id/update_btnSpeichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="10dp"
        android:text="@string/speichern"
        android:textColor="@color/backgroundColor"
        android:backgroundTint="@color/button"
        tools:ignore="RelativeOverlap" />
    <Button
        android:id="@+id/update_btnVerwerfen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="10dp"
        android:text="@string/verwerfen"
        android:textColor="@color/backgroundColor"
        android:backgroundTint="@color/button"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/update_btnLoeschen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="390dp"
        android:layout_marginStart="10dp"
        android:text="@string/delete"
        android:textColor="@color/backgroundColor"
        android:backgroundTint="@color/red"/>
</RelativeLayout>